--- a/threat/templates/user/user_display.html
+++ b/threat/templates/user/user_display.html
@@ -343,6 +343,18 @@
                                 {% endif %}
                             </ul>
                         </li>
+                        <li class="nav-small-cap"><i class="mdi mdi-dots-horizontal"></i> <span class="hide-menu">Feed Threat</span></li>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-account-multiple"></i><span class="hide-menu">Feed</span></a>
+                            <ul aria-expanded="false" class="collapse  first-level">
+
+                                <li class="sidebar-item"><a href="/listmalware" class="sidebar-link"><i class="mdi mdi-adjust"></i><span class="hide-menu">Liste des malwares</span></a></li>
+                                <li class="sidebar-item"><a href="/listdomain" class="sidebar-link"><i class="mdi mdi-adjust"></i><span class="hide-menu">Liste des domaines</span></a></li>
+
+                                <li class="sidebar-item"><a href="/listip" class="sidebar-link"><i class="mdi mdi-adjust"></i><span class="hide-menu">Liste des IP</span></a></li>
+                                <li class="sidebar-item"><a href="/listhash" class="sidebar-link"><i class="mdi mdi-adjust"></i><span class="hide-menu">Liste des Hash</span></a></li>
+
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
                 <!-- End Sidebar navigation -->
