--- a/threat/templates/api/checkip.html
+++ b/threat/templates/api/checkip.html
@@ -557,7 +557,7 @@
                                     </thead>
                                     <tbody>
 
-                                    {% for i in http_scan %}
+                                    {% for i in http_scan.data %}
                                         <tr id="1" class="gradeX">
                                             <td>{{ i.name }}</td>
                                             <td>{{ i.value }}</td>
