--- a/threat/templates/user/add_user.html
+++ b/threat/templates/user/add_user.html
@@ -95,37 +95,47 @@
                             </a>
                             <div class="dropdown-menu animated bounceInDown">
                                 <div class="mega-dropdown-menu row" style="height: 200px;">
-                                    <div class="col-lg-3  m-b-40 m-t-20">
+                                    <div class="col-lg-2  m-b-40 m-r-10 m-t-30">
                                         <h4 class="m-b-20">Check Domain</h4>
                                         <form action="/checkdomain" method="POST" class="app-search position-absolute">
                                             {% csrf_token %}
                                         		<div class="form-group">
-                                           <input type="text" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"></a>
+                                           <input type="text"  name="domain" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"></a>
                                        			</div>
                                             <button type="submit" class="btn btn-info">Check Domain</button>
                                         </form>
                                     </div>
-                                    <div class="col-lg-3  m-b-40 m-t-20">
+                                    <div class="col-lg-2  m-b-40 m-r-10 m-t-30">
                                         <h4 class="m-b-20">Chech Ip Adresse</h4>
                                         	<form action="/checkip" method="POST" class="app-search position-absolute">
                                                 {% csrf_token %}
                                         		<div class="form-group">
-                                           <input type="text" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"></a>
+                                           <input type="text" name="ip" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"></a>
                                        			</div>
                                             <button type="submit" class="btn btn-info">Chech Ip Adresse</button>
                                             </form>
                                     </div>
-                                    <div class="col-lg-3  m-b-40 m-t-20">
+                                    <div class="col-lg-2  m-b-40 m-r-10 m-t-30">
                                         <h4 class="m-b-20">Check Hash</h4>
                                         	<form action="/checkhash" method="POST" class="app-search position-absolute">
                                                 {% csrf_token %}
                                         		<div class="form-group">
-                                           <input type="text" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"></a>
+                                           <input type="text" name="hash" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"></a>
                                        			</div>
                                             <button type="submit" class="btn btn-info">Check Hash</button>
                                             </form>
                                     </div>
-                                    <div class="col-lg-3  m-b-40 m-t-20">
+                                    <div class="col-lg-2  m-b-40 m-r-10 m-t-30">
+                                        <h4 class="m-b-20">Check Email</h4>
+                                        <form action="/checkmail" method="POST" class="app-search position-absolute">
+                                            {% csrf_token %}
+                                        		<div class="form-group">
+                                           <input type="email"  name="mail" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"></a>
+                                       			</div>
+                                            <button type="submit" class="btn btn-info">Check Email</button>
+                                        </form>
+                                    </div>
+                                    <div class="col-lg-3  m-b-40 m-r-10 m-t-30">
                                         <h4 class="m-b-20">Check File</h4>
                                         	<form action="/checkfile" method="POST" enctype="multipart/form-data" class="app-search position-absolute">
                                                 {% csrf_token %}
